--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,11 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>eureka</module>
         <module>provider</module>
         <module>common</module>
         <module>consumer</module>
+        <module>center</module>
+        <module>demos</module>
     </modules>
 
     <parent>
