--- a/monitor/hystrix-dashboard/pom.xml
+++ b/monitor/hystrix-dashboard/pom.xml
@@ -3,17 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springcloud2</artifactId>
+        <artifactId>monitor</artifactId>
         <groupId>net.riking</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demos</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>consumer-ribbon</module>
-    </modules>
-
+    <artifactId>hystrix-dashboard</artifactId>
+    <dependencies>
+        <!--断路器仪表盘-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
