--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>consumer</module>
         <module>center</module>
         <module>demos</module>
+        <module>monitor</module>
     </modules>
 
     <parent>
@@ -43,8 +44,22 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-
+        <!--自省和监控的集成功能-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!--注册中心-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
     </dependencies>
+
     <!-- 注意： 这里必须要添加， 否者各种依赖有问题 -->
     <repositories>
         <repository>
