--- a/monitor/hystrix-dashboard/src/main/resources/application.yml
+++ b/monitor/hystrix-dashboard/src/main/resources/application.yml
@@ -3,9 +3,8 @@ server:
 
 eureka:
   client:
-    serviceUrl:
-      defaultZone: http://${EUREKA_ZONE_HOST:eureka7001}:${EUREKA_ZONE_PORT:7001}/eureka/
-
+    service-url:
+      defaultZone: http://eureka7001:7001/eureka
 spring:
   application:
     name: hystrix-dashboard
