--- a/monitor/turbine/pom.xml
+++ b/monitor/turbine/pom.xml
@@ -10,6 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>turbine</artifactId>
-
-
+    <dependencies>
+    <!--集群监控-->
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
+    </dependency>
+        <dependency>
+            <groupId>org.asynchttpclient</groupId>
+            <artifactId>async-http-client</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+    </dependencies>
 </project>
