--- a/demos/consumer-feign/pom.xml
+++ b/demos/consumer-feign/pom.xml
@@ -9,7 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>consumer-ribbon</artifactId>
+    <artifactId>consumer-feign</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+     </dependencies>
 
 
 
