--- a/center/config-server/pom.xml
+++ b/center/config-server/pom.xml
@@ -3,24 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springcloud2</artifactId>
+        <artifactId>center</artifactId>
         <groupId>net.riking</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demos</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>consumer-ribbon</module>
-        <module>consumer-feign</module>
-        <module>config-client</module>
-    </modules>
+    <artifactId>config-server</artifactId>
 <dependencies>
-    <!-- SpringBoot整合Web组件 -->
     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-config-server</artifactId>
     </dependency>
 </dependencies>
 
