--- a/center/pom.xml
+++ b/center/pom.xml
@@ -15,6 +15,7 @@
         <module>eureka</module>
         <module>eureka-cluster-7001</module>
         <module>eureka-cluster-7002</module>
+        <module>config-server</module>
     </modules>
 
 
