--- a/center/bus-server/pom.xml
+++ b/center/bus-server/pom.xml
@@ -3,24 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springcloud</artifactId>
+        <artifactId>center</artifactId>
         <groupId>net.riking</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>monitor</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>turbine</module>
-        <module>hystrix-dashboard</module>
-    </modules>
+    <artifactId>bus-server</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+            <!--消息总线-->
+  <!--            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+            </dependency>-->
     </dependencies>
 
 </project>
