--- a/center/pom.xml
+++ b/center/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springcloud2</artifactId>
+        <artifactId>springcloud</artifactId>
         <groupId>net.riking</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -16,6 +16,7 @@
         <module>eureka-cluster-7001</module>
         <module>eureka-cluster-7002</module>
         <module>config-server</module>
+        <module>bus-server</module>
     </modules>
 
 
