--- a/demos/config-client/pom.xml
+++ b/demos/config-client/pom.xml
@@ -15,6 +15,11 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-config-client</artifactId>
     </dependency>
+    <!--消息总线-->
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+    </dependency>
 </dependencies>
 
 </project>
