--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springcloud2</artifactId>
+        <artifactId>springcloud</artifactId>
         <groupId>net.riking</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -12,6 +12,8 @@
     <artifactId>demos</artifactId>
     <packaging>pom</packaging>
     <modules>
+        <module>provider</module>
+        <module>consumer</module>
         <module>consumer-ribbon</module>
         <module>consumer-feign</module>
         <module>config-client</module>
